 a.Can now LIST, CREATE, DESTROY, and MODIFY ACCOUNTS
 b.For transition muds: char selection IMPORT command lets players import their old chars to new accounts.
 c.EXPIRATION system works with accounts, when common account system is enabled. 
22.New command: LOGOUT/LOGOFF -- exits back to login prompt/char selection
23.New INI entry: EXVIEW, for selecting types of exit views for the players
24.XP Bonuses for killing HL targets will only apply if player/mob close to highest level players level.
25.New Forum system -- see FORUMJOURNALS entry in the coffeemud.ini file
26.BIG fakedb upgrade: indexing, multi-keys, ORDER BY, LIKE, COUNT, complex WHERE conditions, optomizations. ** Real DB is still better.
27.Raw material resources can now have effects (for eat/drink/whatever)
28.CL Editor for weapons/armor will now automatically rebalance damage/value/etc whenever level is changed.
29.Web Catalog: can substitute a user-selectable column (damage, basegold, etc) and sort by it. 
30.Two new NOCACHE entries in coffeemud.ini file: FILERESOURCES, CATALOG (for you memory conscious people)
31.Internal: slight improvement to db connection management that should improve memory use.
32.MUDSTATE variable in coffeemud.ini file has changed.  Please update your ini files!
33.CLASSSYSTEM has been expanded with another apprentice-based set of choices.
34.New command: MPRUN -- for Archons to run Scriptable scripts, and for use in automated testing.
35.Help on classes and races give much of same details as found on web now.
36.Channel HELP entries are automatically generated.
37.CoffeeMud's bugs were all cured, at public expense.
# Build 5.6.1 Release 4/22/2010 * Bug Fix build only
# Build 5.6.2 Release 4/25/2010 * Bug Fix build only
# Build 5.6.3 Release ?/?/2010
 1.Can now enter I3 RESTART or IMC2 RESTART to reconnect to the intermuds
 2.New language: Undercommon
 3.New property/skill: TemporaryAffects (for timer-dependent behaviors/properties)
 4.New property: Prop_LanguageSpeaker
 