@@ -190,6 +190,12 @@ I3ROUTERS=204.209.44.3:8080:*i4
 # Default is -ANYCLASS +Archon
 SYSOPMASK=-ANYCLASS +Archon
 
+# WIZLISTMASK is a mask that determines which names appear
+# when the WIZLIST command is used.  If empty, the default mask is used, which
+# is: -ANYCLASS +Archon.  See the HELP ZAPPERMASK for more information, though
+# ONLY those flags dealing with name, class, race, and level will apply.
+WIZLISTMASK=
+
 # The JSCRIPTS parameter defines the use of JavaScript in Scriptable
 # behaviors.  If the setting is 0, then JavaScripts are
 # never executed in Scriptable behaviors.  A value of 2 (default) means
