@@ -76,5 +76,18 @@ public interface PlayerLibrary extends CMLibrary, Runnable
     	public String accountName="";
     	public String email="";
     	public MOB loadedMOB=null;
+    	public Tickable toTickable()
+    	{
+    		return new Tickable() {
+				public long getTickStatus() {return 0;}
+				public String name() { return name;}
+				public boolean tick(Tickable ticking, int tickID) { return false;}
+				public String ID() { return "StdMOB";}
+				public CMObject copyOf() { return this;}
+				public void initializeClass() {}
+				public CMObject newInstance() { return this;}
+				public int compareTo(CMObject o) {return (o==this)?0:-1;}
+    		};
+    	}
     }
 }
