@@ -295,6 +295,12 @@
 			<P>
 			<A HREF="javascript:openUp('MASKS')">Click here for Mask help</a>
 		</TD></TR>
+		<TR><TD WIDTH=20% VALIGN=TOP><FONT COLOR=WHITE>WIZLISTMASK</FONT>
+		</TD><TD WIDTH=80% VALIGN=TOP>
+		<INPUT TYPE=TEXT NAME=WIZLISTMASK SIZE=20 VALUE="@INIValue?MASK=WIZLISTMASK&VALUE@">
+		<BR>
+		<FONT COLOR=WHITE>@INIValue?MASK=WIZLISTMASK&INIHELP@
+		</TD></TR>
 		<TR><TD WIDTH=20%  COLSPAN=2 VALIGN=TOP><FONT COLOR=WHITE>MAXCONNSPERIP</FONT>
 		</TD><TD WIDTH=80%  COLSPAN=8 VALIGN=TOP>
 		<INPUT TYPE=TEXT NAME=MAXCONNSPERIP SIZE=10 VALUE="@INIValue?MASK=MAXCONNSPERIP&VALUE@">
