@@ -2271,4 +2271,5 @@ Special/Reserved Quest called holidays can be added to/modified on an area-by-ar
  2.New language: Undercommon
  3.New property/skill: TemporaryAffects (for timer-dependent behaviors/properties)
  4.New property: Prop_LanguageSpeaker
+ 5.New INI entry: WIZLISTMASK -- WIZLIST command modified to support it.
  
